fix(Accordion): in exited visibility hidden (#9496)

--- a/packages/vkui/src/components/Accordion/Accordion.module.css
+++ b/packages/vkui/src/components/Accordion/Accordion.module.css
@@ -46,6 +46,7 @@
 }
 
 .inExited {
+  visibility: hidden;
   block-size: 0;
 }
 
